renamed tech section to tech posts, due to werid pluralisation; fixed issue where lists would wrap weirdly

--- a/themes/coder/static/less/style.less
+++ b/themes/coder/static/less/style.less
@@ -352,3 +352,14 @@ img {
 .float-left {
   float: left;
 }
+
+// Custom
+
+.list ul li span.listblock {
+  display: inline-block;
+  text-align: left;
+  width: auto;
+  .date {
+    max-width: 10em;
+  }
+}
